--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-:root {
-    /* ======= GREEN THEME ======= */
+:root 
     --color-primary: #ff7b02;
     --color-primary-variant: #e5a55d;
     --color-bg-1:#000e17;
@@ -8,16 +7,6 @@
     --color-bg-4:#003347;
     --color-light: #85a2b2;
     --color-white: hsl(0,0%,90%);
-
-    /* ========= PURPLE THEME ========= */
-    /* --color-primary: #ff7b02;
-    --color-primary-variant: #e5a55d;
-    --color-bg-1:#140021;
-    --color-bg-2:#1e0032;
-    --color-bg-3:#25003e;
-    --color-bg-4:#36005a;
-    --color-light: #d0b8e0;
-    --color-white: hsl(0,0%,90%); */
 
     --container-widht-lg: 88%;
     --container-widht-md: 92%;
@@ -39,7 +28,7 @@ html {
 }
 
 body {
-    /* font-family: 'Montserrat', sans-serif; */
+  
 
     background: var(--color-bg-3);
     color: var(--color-light);
